<resources>
    <string name="app_name">App</string>
    <string name="progress_dialog_loading">Loading</string>
    <string name="progress_dialog_wait">Please wait ...</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_cost">Cost</string>
    <string name="btn_create">Create</string>
    <string name="hint_city">City</string>
    <string name="update_poster_button">Update</string>
    <string name="dialog_poster_edit">Edit</string>
    <string name="dialog_poster_remove">Remove</string>
    <string name="dialog_poster_title">Poster edit</string>
</resources>
