<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/dialog_poster_title"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="36dp"
        android:text="@string/dialog_poster_edit"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/dialog_poster_remove"
        android:textColor="#000"
        android:textSize="16sp" />

</LinearLayout>